--- a/index.html
+++ b/index.html
@@ -27,15 +27,7 @@
 
     <script src="//maps.google.com/maps/api/js"></script>
     <script src="//d3js.org/d3.v3.min.js"></script>
-    <script>
-      // Create the Google Map…
-      document.addEventListener("DOMContentLoaded", function(event) {
-        var map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 10,
-          center: new google.maps.LatLng(37.76487, -122.41948)
-        });
-      });
-    </script>
     <script src="dist/build.js"></script>
+    <script src="example.js"></script>
   </body>
 </html>
