--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Google Maps Point Clustering with D3.</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
       body {
         margin: 0;
