--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         right: 0;
         bottom: 0;
         width: 25%;
+        padding: 0 20px;
+        box-sizing: border-box;
         overflow-y: auto;
       }
     </style>
