--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div id="results"></div>
     </div>
 
-    <script src="//maps.google.com/maps/api/js"></script>
+    <script src="//maps.google.com/maps/api/js?key=AIzaSyDciDh5LCPwyxG8tml6998d80mlukEj8Q4&libraries=drawing,places,geometry"></script>
     <script src="//d3js.org/d3.v3.min.js"></script>
     <script src="dist/build.js"></script>
     <script src="example.js"></script>
