Working on tests.

--- a/test.html
+++ b/test.html
@@ -4,6 +4,33 @@
   <meta charset="utf-8">
   <title>Mocha Tests</title>
   <link href="//cdn.rawgit.com/mochajs/mocha/2.2.5/mocha.css" rel="stylesheet" />
+  <style>
+    #map {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      z-index: 0;
+    }
+    #mocha {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 50%;
+      bottom: 0;
+      overflow: auto;
+      background: #fff;
+      padding: 30px;
+      opacity: .8;
+      z-index: 1;
+    }
+    #mocha-stats {
+      background: #fff;
+      padding: 10px;
+      z-index: 1;
+    }
+  </style>
 </head>
 
 <body>
