--- a/test.html
+++ b/test.html
@@ -60,7 +60,9 @@
   </script>
   <script src="test/components/PointCluster.js"></script>
   <script>
-    mocha.run();
+    setTimeout(function() {
+      mocha.run();
+    }, 1000)
   </script>
 </body>
 
