--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
     </div>
 
     <script src="//maps.google.com/maps/api/js?key=AIzaSyDciDh5LCPwyxG8tml6998d80mlukEj8Q4&libraries=drawing,places,geometry"></script>
-    <script src="//d3js.org/d3.v3.min.js"></script>
+    <script src="//d3js.org/d3.v4.min.js"></script>
+    <script src="//d3js.org/d3-quadtree.v1.min.js"></script>
     <script src="dist/build.js"></script>
     <script src="example.js"></script>
   </body>
