--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       </div>
     </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="//maps.google.com/maps/api/js?key=AIzaSyDciDh5LCPwyxG8tml6998d80mlukEj8Q4&libraries=drawing,places,geometry"></script>
     <script src="//d3js.org/d3.v4.min.js"></script>
     <script src="//d3js.org/d3-quadtree.v1.min.js"></script>
